change email to p and make centers icon a building

--- a/app/views/admin/volunteers/show.html.slim
+++ b/app/views/admin/volunteers/show.html.slim
@@ -21,7 +21,7 @@
             li.list-group-item
               = fa_icon 'envelope-o', class: 'margin-r-5'
               b Email
-              span.pull-right = volunteer.email
+              p = volunteer.email
 
             li.list-group-item
               = fa_icon 'id-card-o', class: 'margin-r-5'
@@ -122,7 +122,7 @@
           p = volunteer.skills
 
           strong
-            = fa_icon 'wrench', class: 'margin-r-5'
+            = fa_icon 'building-o', class: 'margin-r-5'
             | Preferred Centers
           p = volunteer.centers
 
