change duration to p on Event show page

--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -42,7 +42,7 @@
             li.list-group-item
               = fa_icon 'hourglass-2', class: 'margin-r-5'
               b Approx. Duration
-              span.pull-right = event.duration
+              p = event.duration
 
             li.list-group-item
               = fa_icon 'group', class: 'margin-r-5'
