--- a/app/views/admin/events/show.html.slim
+++ b/app/views/admin/events/show.html.slim
@@ -22,7 +22,7 @@
             li.list-group-item
               = fa_icon 'institution', class: 'margin-r-5'
               b Center Name
-              = link_to truncate(event.center.name), admin_center_path(event.center), class: 'pull-right'
+              p = link_to truncate(event.center.name), admin_center_path(event.center)
 
             li.list-group-item
               = fa_icon 'map-marker', class: 'margin-r-5'
